# autonomous-builder-x

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Anchor.toml  COMPETITIVE-ANALYSIS.md  DEMO.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  HACKATHON-STATUS.md  HACKATHON_READY.md  INTEGRATIONS.md  LICENSE  MISSION_ACCOMPLISHED.md  PIVOT.md  PROGRESS-UPDATE.md  README.md  REAL_IMPLEMENTATION.md  SHIP-IT-SUMMARY.md  deploy-key.json  forum-update.json  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/api/autonomous/: route.ts
app/api/builds/: route.ts
app/api/builds/[id]/: route.ts
app/api/live-build/: route.ts
app/api/stats/: route.ts
app/api/wallet/: route.ts
app/autonomous/: page.tsx
app/history/: page.tsx
app/live/: page.tsx
app/wallet/: page.tsx
integrations/mcp-server/: README.md  index.js  package.json
integrations/openclaw-skill/: SKILL.md
integrations/sdk-examples/: 1-basic-build.ts  2-verify-onchain.ts  3-agent-to-agent.ts  README.md
lib/: buildStore.ts
programs/liveforge-logger/: Cargo.toml
programs/liveforge-logger/src/: lib.rs
scripts/: build-proofs.json  create-proofs.ts
sdk/: package.json  tsconfig.json
sdk/src/: index.test.ts  index.ts
src/agent/: index.ts  live-builder.ts
src/lib/: solana-integration.ts
