[package]
name = "liveforge-logger"
version = "0.1.0"
description = "On-chain build action logger for LiveForge"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liveforge_logger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
sha2 = "0.10"
